# td_compression

./: .gitignore
src/octomap_bridge/: CMakeLists.txt  package.xml
src/octomap_bridge/src/: bridge.cpp
src/td_compression/: package.xml  setup.cfg  setup.py
src/td_compression/config/: SR_128.yaml  decode_octomap.rviz  encode_octomap.rviz  octo_rviz_exp.rviz
src/td_compression/launch/: batch_decoder.launch.py  benchmark_models.launch.py  map_rosbag.launch.py
src/td_compression/td_compression/: batch_decoder.py  click_to_goal.py  online_encoder.py  utils.py
src/td_compression/td_compression/models/: components.py  vae_module.py
